kubernetes/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: frontend-ingress
# spec:
#   rules:
#     - http:
#         paths:
#           - pathType: Prefix
#             path: "/"
#             backend:
#               service:
#                 name: frontend
#                 port:
#                   number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/backend"
            backend:
              service:
                name: backend
                port:
                  number: 5000
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontend
                port:
                  number: 4200
